Remove CSS map, fix issue with setting grid-gap and instead opt for last-child selector

--- a/css/main.scss
+++ b/css/main.scss
@@ -71,13 +71,17 @@ html {
 .link-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-gap: 2rem;
+
     width: 100%;
     justify-content: center;
 
     > .link {
         will-change: transform;
         transition: transform 0.2s;
+
+		&:not(:last-child) {
+			margin-right: 2rem;
+		}
 
         &:hover {
             transform: scale(1.1);
@@ -93,6 +97,8 @@ html {
             font-size: 1.5rem;
         }
     }
+
+
 }
 
 /* Error */
